# insight-hub

./: .dockerignore  .env.example  .gitignore  Dockerfile  compose.yaml  package-lock.json
Backend/: .env  .env.example  go.mod  go.sum  main.go
Backend/ai-ask/: Dockerfile  llm.py  main.py  pyproject.toml  qdrant_db.py  redis_server.py  utils.py
Backend/ai-ask/benchmarks/: .gitignore  TODO.md  all_blogs.json  benchmark_generation.py  benchmark_latency.py  benchmark_load.py  benchmark_retrieval.py  config.py  eval_dataset.json  eval_dataset_schema.py  generate_eval_dataset.py  load_dataset.py  run_benchmarks.py  usage.md
Backend/ai-ask/benchmarks/data/: data.json  profile
Backend/ai-ask/benchmarks/results/: full_benchmark.json  generation_benchmark.json  latency_benchmark.json  load_benchmark.json  retrieval_benchmark.json
Backend/ai-ask/benchmarks/results/baseline/: ai_benchmark_report.md  full_benchmark.json  generation_benchmark.json  latency_benchmark.json  load_benchmark.json  retrieval_benchmark.json
Backend/ai-ask/benchmarks/results/optimize_getblogbyid/: full_benchmark.json  generation_benchmark.json  latency_benchmark.json  load_benchmark.json  retrieval_benchmark.json
Backend/db/: auth_db.go  blogs_db.go  init.go  qdrant.go  redis.go
Backend/handlers/: ai_handlers.go  blog_handlers.go
Backend/middleware/: middleware.go
Backend/models/: blog_models.go  redis_model.go  response.go  user_models.go
Backend/utils/: utils.go
src/: App.tsx  main.tsx
src/pages/: BlogDetails.tsx  CreateBlog.tsx  Explore.tsx  Index.tsx  Messages.tsx  Profile.tsx  (+2 more)
(+1 files in other folders)
