[project]
name = "ai-ask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastembed>=0.7.4",
    "groq>=1.1.1",
    "qdrant-client>=1.17.0",
    "redis>=7.3.0",
    "requests>=2.32.5",
]

[project.optional-dependencies]
benchmark = [
    "ragas>=0.4.3",
]